2012-07-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_groups.php: Included void agents on
	normal status.
	include/functions_os.php: Included void agents on
	normal status.
	operation/tree.php: Fixed OS, groups and included void agents
	in groups and OS views.

2012-07-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Fixed all views: deleted alert fired
	when module is disabled.

2012-07-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/tree.php: Fixed module view: agents and modules disabled
	are hidden. Also fixed broken footer when an empty filter is 
	selected.
	
2012-07-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/configurar_agente.php: Fixed a bug
	with variable allocation.

2012-07-16 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/agents_modules.php, extensions/users_connected.php,
	extensions/agents_alerts.php,
	operation/visual_console/render_view.php,
	operation/visual_console/public_console.php,
	operation/agentes/networkmap.groups.php,
	operation/agentes/estado_ultimopaquete.php,
	operation/agentes/networkmap.topology.php, general/header.php,
	godmode/db/db_refine.php, godmode/agentes/configurar_agente.php,
	godmode/alerts/configure_alert_compound.php,
	godmode/setup/setup_visuals.php, godmode/snmpconsole/snmp_alert.php,
	godmode/modules/manage_network_components_form_wmi.php,
	include/functions_config.php, include/functions_api.php,
	include/functions_agents.php, include/functions_forecast.php:
	cleaned source code style and change magic numbers for time
	constants.

2012-07-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/tree.php: Removed trace.

2012-07-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/snmpconsole/snmp_alert.php,
	godmode/servers/manage_recontask_form.php,
	include/functions_filemanager.php, include/functions_networkmap.php,
	include/constants.php, include/graphs/functions_gd.php,
	include/graphs/functions_pchart.php,